@@ -1,3 +1,9 @@
+2007-08-13 Jens Tkotz <jens@peino.de> 1.5.7-svn-b16
+
+ * Fix: Better regexp for email check.
+
+   Thanks to G2.
+
 2007-08-12 Jens Tkotz <jens@peino.de> 1.5.7-svn-b15
 
  * Change: Added function to detect jhead version.
